# python-clearpass

./: .bumpversion.cfg  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .scaraplate.conf  Dockerfile  README.md  dev.sh  pylama.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: checks.yaml
clearpass/: __init__.py  __version__.py  client.py
tests/: __init__.py  test_client.py
