[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "clearpass"
version = "0.0.1"
description = "Python library for interfacing with the Aruba ClearPass REST API"
license = "BSD-3-Clause"
authors = ["Andrew Teixeira <teixeira@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/python-clearpass"
homepage = "https://github.com/broadinstitute/python-clearpass"
keywords = ["aruba", "clearpass"]

[tool.poetry.dependencies]
python = "^3.7"  # Compatible python versions must be declared here

configparser = ">=3.5.0"
requests = "*"
responses = "^0.19.0"
toml = "^0.10"

[tool.poetry.dev-dependencies]
bump2version = "*"
coverage = ">=4.4.2"
fixtures = "*"
flake8 = "*"
green = ">=2.12.0"
mock = ">=2.0.0"
pydocstyle = "<7"
pylama = "*"
pylint = "*"
pyyaml = "*"
testtools = "*"
twine = "*"
unittest2 = ">=1.1.0"
wheel = "*"
yamllint = "*"
